k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: smart-canteen
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
    - port: 9003
      targetPort: 9003
  selector:
    app: order-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: smart-canteen
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: smart-canteen/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9003
          readinessProbe:
            tcpSocket:
              port: 9003
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9003
            initialDelaySeconds: 60
            periodSeconds: 20
